[package]
name = "dnd_cc_rust"
version = "0.1.0"
authors = ["RustedRed"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dnd_cc_lib"
path = "src/lib.rs"

[[bin]]
name = "dnd_cc_demo"
path = "src/bin/main/main.rs"

[dependencies]
